GPX parser tests extended.